[package]
edition = "2024"
name = "mihomo-connections-tracker"
version = "0.1.1"

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "4.0", features = ["derive"]}
futures-util = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.6", features = ["runtime-tokio-native-tls", "sqlite", "macros"]}
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = "0.18"
tungstenite = "0.18"
