[package]
edition = "2021"
name = "mihomo-connections-tracker"
version = "0.2.0"

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
chrono = {version = "0.4.40", features = ["serde"]}
clap = {version = "4.5.37", features = ["derive"]}
futures-util = "0.3.31"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sqlx = {version = "0.8.5", features = ["runtime-tokio-native-tls", "sqlite", "chrono"]}
tokio = {version = "1.44.2", features = ["full"]}
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
reqwest = { version = "0.12.15", features = ["json"] }
warp = "0.3.7"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
